fixing task completiion and prioritization on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -132,6 +132,11 @@ input#task-deadline {
   color: #bbbbbb;
 }
 
+.item-text.completed {
+  text-decoration: line-through;
+  color: #bbbbbb;
+}
+
 ion-icon {
   font-size: 2rem;
   cursor: pointer;
@@ -211,11 +216,6 @@ input#search-item:focus {
   padding: 30px;
   background: white;
   font-size: 1.3em;
-  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1), 0 10px 20px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  max-width: 25vw;
-  overflow-x: hidden;
-  flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   gap: 15px;
